# oparser

./: .gitignore  README.md  dune-project  main  oparser.opam
.swm/: documentation.xh39eog8.sw.md  swimm.json
_build/: .db  .digest-db  log
_build/default/: META.oparser  README.md  oparser.dune-package  oparser.install
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/0bb5094b13567c3c4e1ee33245b80e63/: dune__exe___ppx.cmo
_build/default/.ppx/2c8460a2c8a8d3e432c0757930c05e03/: dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.ppx/cf33bb1016762e995c5c95922a7c059a/: dune__exe___ppx.cmi  dune__exe___ppx.cmo
_build/default/lib/: ast.ml  ast.pp.ml  lexer.ml  lexer.mll  lexer.pp.ml  oparser.cma  oparser.cmxa  oparser.cmxs  oparser.ml-gen  parser.ml  parser.mli  parser.mly  parser.pp.ml  parser.pp.mli  parser__mock.ml.mock  parser__mock.ml.pp.mock  parser__mock.mli.inferred
_build/default/lib/.merlin-conf/: lib-oparser
_build/default/lib/.oparser.objs/: oparser__Ast.impl.d  oparser__Lexer.impl.all-deps  oparser__Lexer.impl.d  parser__mock.impl.all-deps
_build/default/lib/.oparser.objs/byte/: oparser.cmi  oparser.cmo  oparser.cmt  oparser__Ast.cmi  oparser__Ast.cmo  oparser__Ast.cmt  oparser__Lexer.cmi  oparser__Lexer.cmo  oparser__Lexer.cmt  oparser__Parser.cmi  oparser__Parser.cmo  oparser__Parser.cmt  oparser__Parser.cmti
_build/default/lib/.oparser.objs/native/: oparser.cmx  oparser__Ast.cmx  oparser__Lexer.cmx  (+1 more)
lib/: ast.ml  parser.mly
parser/lib/: ast.ml  dune  lexer.mll  parser.mly
test/: TestClass.java
(+24 files in other folders)
